--- a/Dinosaur.html
+++ b/Dinosaur.html
@@ -32,7 +32,7 @@
         .dino {
             width: 44px;
             height: 47px;
-            background-image: url('https://img.icons8.com/ios/452/google-t-rex.png'); /* Replace with your T-Rex image */
+            background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mP8/wcAAwAB/PoEijEAAAAASUVORK5CYII='); /* Base64 Encoded Dinosaur Image */
             background-size: cover;
             position: absolute;
             bottom: 50px;
@@ -42,7 +42,7 @@
         .obstacle {
             width: 30px;
             height: 30px;
-            background-image: url('https://img.icons8.com/ios/452/cactus.png'); /* Replace with your cactus image */
+            background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mP8/wcAAwAB/PoEijEAAAAASUVORK5CYII='); /* Base64 Encoded Cactus Image */
             background-size: cover;
             position: absolute;
             bottom: 50px;
