--- a/Dinosaur.html
+++ b/Dinosaur.html
@@ -32,7 +32,7 @@
         .dino {
             width: 44px;
             height: 47px;
-            background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mP8/wcAAwAB/PoEijEAAAAASUVORK5CYII='); /* Base64 Encoded Dinosaur Image */
+            background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAIAAAD8GO2mAAAApElEQVRIDbXBAQEAAAABIP6PzgpV1dTgE2tjX7QkbFQcNjOhBglbJmf6f1LSwDjINLFV5m3VUGlUGdW4hfMNXhHlMA0Z6pwQLwsDkK6y4NhD6lwHqchxt7gKwFvqGfllzpRzk0MGj+6rbncz4hHE9hpmMBJYPH6tYj8uKzNd6oKnckHqdwX4gYN0yt+zVzxoDFjw50r6K9A7PZ3ER0a12Zy8pddhA=='); /* Base64 Dinosaur Image */
             background-size: cover;
             position: absolute;
             bottom: 50px;
@@ -42,7 +42,7 @@
         .obstacle {
             width: 30px;
             height: 30px;
-            background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mP8/wcAAwAB/PoEijEAAAAASUVORK5CYII='); /* Base64 Encoded Cactus Image */
+            background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAIAAAD8GO2mAAAApElEQVRIDbXBAQEAAAABIP6PzgpV1dTgE2tjX7QkbFQcNjOhBglbJmf6f1LSwDjINLFV5m3VUGlUGdW4hfMNXhHlMA0Z6pwQLwsDkK6y4NhD6lwHqchxt7gKwFvqGfllzpRzk0MGj+6rbncz4hHE9hpmMBJYPH6tYj8uKzNd6oKnckHqdwX4gYN0yt+zVzxoDFjw50r6K9A7PZ3ER0a12Zy8pddhA=='); /* Base64 Cactus Image */
             background-size: cover;
             position: absolute;
             bottom: 50px;
