--- a/Fps.html
+++ b/Fps.html
@@ -33,35 +33,30 @@
 
             // Set up the camera (Field of View, Aspect Ratio, Near and Far Clipping Planes)
             camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
+            camera.position.set(0, 1.6, 0); // Set camera height to 1.6m
 
             // Create the WebGLRenderer and set its size
             renderer = new THREE.WebGLRenderer();
             renderer.setSize(window.innerWidth, window.innerHeight);
             document.body.appendChild(renderer.domElement);
 
-            // Add ambient light to the scene (everything will be lit evenly)
-            const light = new THREE.AmbientLight(0x404040, 2); // 2 is intensity
+            // Set up lighting
+            const light = new THREE.AmbientLight(0x404040, 0.8); // Low intensity ambient light
             scene.add(light);
 
-            // Create a directional light to simulate sunlight
-            const dirLight = new THREE.DirectionalLight(0xffffff, 1);
+            const dirLight = new THREE.DirectionalLight(0xffffff, 1); // Strong directional light
             dirLight.position.set(0, 10, 10).normalize();
             scene.add(dirLight);
-
-            // Add a basic cube player
-            player = new THREE.Object3D();
-            player.position.set(0, 1.6, 0); // Set player height to 1.6m
-            scene.add(player);
 
             // Add a simple ground plane
             const ground = new THREE.Mesh(
                 new THREE.PlaneGeometry(100, 100),
-                new THREE.MeshBasicMaterial({ color: 0x00ff00, side: THREE.DoubleSide })
+                new THREE.MeshStandardMaterial({ color: 0x00ff00 }) // Standard material for better lighting
             );
             ground.rotation.x = Math.PI / -2; // Rotate the plane to lie flat
             scene.add(ground);
 
-            // Create a simple wall object
+            // Add simple walls
             createWall(5, 0, -10, 10, 10);
             createWall(-5, 0, 10, 10, 10);
 
@@ -78,8 +73,8 @@
             document.addEventListener('mousemove', (event) => handleMouseMove(event), false);
             document.addEventListener('click', shootBullet, false);
 
-            // Bullet material
-            bulletMaterial = new THREE.MeshBasicMaterial({ color: 0xff0000 });
+            // Bullet material (response to lighting)
+            bulletMaterial = new THREE.MeshStandardMaterial({ color: 0xff0000 });
 
             // Resize handling
             window.addEventListener('resize', onWindowResize, false);
@@ -88,7 +83,7 @@
         function createWall(x, y, z, width, height) {
             const wall = new THREE.Mesh(
                 new THREE.PlaneGeometry(width, height),
-                new THREE.MeshBasicMaterial({ color: 0x0000ff, side: THREE.DoubleSide })
+                new THREE.MeshStandardMaterial({ color: 0x0000ff, side: THREE.DoubleSide })
             );
             wall.position.set(x, y, z);
             scene.add(wall);
@@ -97,7 +92,7 @@
         function createEnemy(x, y, z) {
             enemy = new THREE.Mesh(
                 new THREE.BoxGeometry(1, 1, 1),
-                new THREE.MeshBasicMaterial({ color: 0xff0000 })
+                new THREE.MeshStandardMaterial({ color: 0xff0000 })
             );
             enemy.position.set(x, y, z);
             enemies.push(enemy);
